# two_pass

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  application.cpp  commandqueue.cpp  game.cpp  main.cpp  objects.cpp  sphereRender.cpp  twoPassRender.cpp  utils.cpp
source/inc/: application.h  commandqueue.h  game.h  helpers.h  objects.h  render.h  sphereRender.h  twoPassRender.h
source/inc/utils/: utils.h
source/shaders/: ComputeShader.hlsl  PixelShader.hlsl  TwoPassPixelShader.hlsl  TwoPassPixelTextureShader.hlsl  TwoPassVertexShader.hlsl  VertexShader.hlsl
texture/: directx12texture.dds
